--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,4 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<div class="home">
+    <h1>dot.end</h1>
+    <a class="homeUser" href="users/new">new user</a>
+</div>
