Worked on some CSS for the new path

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,7 @@
-* {
+/* * {
   color: #010100;
-}
+  border: 1px solid pink;
+} */
 body {
   display: flex;
   flex-direction: column;
@@ -8,16 +9,16 @@ body {
   align-items: center;
   background-color: ghostwhite;
   margin: 0;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   height: 100vh;
   width: 100vw;
+  font: 12px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 .home {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-size: 8em;
+  font-size: 3em;
 }
 
 a {
@@ -34,15 +35,47 @@ a {
   height: 150px;
   width: 150px;
 }
+.newUserFormBody {
+  display: flex; 
+  flex-direction: column;
+  align-items: center;
+}
+form {
+  height: 100%;
+  width: 100%;
+  font-size: 1.5em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.form-input {
+display: flex;
+justify-content: space-between;
+width: 100%;
+}
+input{
+padding: 4px;
+border-radius: 4px;
+}
+.userInfo {
+font-size: 1em;
+}
+.bottom-buttons {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
 
 
 @media only screen and (min-width: 643px) {
-  *{
-    border: 1px solid pink;
-  }
-  * {
-    color: #010100;
-  }
+
   body {
     display: flex;
     flex-direction: column;
@@ -50,7 +83,7 @@ a {
     align-items: center;
     background-color: ghostwhite;
     margin: 0;
-    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    font: 12px "Lucida Grande", Helvetica, Arial, sans-serif;
     height: 100vh;
     width: 100vw;
   }
@@ -74,11 +107,44 @@ a {
   }
   .newUserFormBody{
     display: flex;
+    justify-content: space-between;
   }
   .defaultImg{
     border-radius: 100%;
     height: 150px;
     width: 150px;
   }
-
+  form {
+    height: 100%;
+    width: 100%;
+    font-size: 1.5em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+  }
+.form {
+  margin-left: 20px;
+ 
+}
+.form-input {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+input{
+  padding: 4px;
+  border-radius: 4px;
+}
+.newUser {
+  margin-right: 20px;
+}
+.userInfo {
+  font-size: 1em;
+}
+.bottom-buttons {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
 }
