--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,7 +18,8 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-size: 3em;
+  font-size: 2em;
+  width: 100%;
 }
 
 a {
@@ -71,80 +72,30 @@ font-size: 1em;
   justify-content: space-between;
   width: 100%;
 }
-
-
+.usersDisplay {
+  width: 100%;
+  display: grid;
+  justify-content: center;
+}
 
 @media only screen and (min-width: 643px) {
-
-  body {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: ghostwhite;
-    margin: 0;
-    font: 12px "Lucida Grande", Helvetica, Arial, sans-serif;
-    height: 100vh;
-    width: 100vw;
-  }
   .home {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     font-size: 4em;
-    width: 100%;
-  }
-  
-  a {
-    color: #010100;
-    text-decoration: none;
-  }
-  
-  .newUserPage {
-    display: flex;
-    flex-direction: column;
   }
   .newUserFormBody{
-    display: flex;
+    flex-direction: row;
     justify-content: space-between;
   }
-  .defaultImg{
-    border-radius: 100%;
-    height: 150px;
-    width: 150px;
-  }
-  form {
-    height: 100%;
+  .userInfo {
     width: 100%;
-    font-size: 1.5em;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
+    justify-content: flex-end;
+   
   }
-.form {
-  margin-left: 20px;
- 
-}
-.form-input {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-}
-input{
-  padding: 4px;
-  border-radius: 4px;
-}
-.newUser {
-  margin-right: 20px;
-}
-.userInfo {
-  font-size: 1em;
-}
-.bottom-buttons {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-}
-}
+  .form {
+    margin-left: 20px;
+  }
+  .newUser {
+    margin-right: 20px;
+  }
+  }
