--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -6,7 +6,7 @@
         </div>
         <div class="form">
             <div class="userInfo">
-                <h2>user info</h2>
+                <h2> enter user info:</h2>
             </div>
             <form action="/users" method="POST">
                 <div class="form-input">
@@ -21,7 +21,7 @@
 
                 <div class="form-input">
                     <label for="img">user image url:</label>
-                    <input type="text" name="img" />
+                    <input type="text" name="img" default/>
                 </div>
 
                 <div class="form-input">
