Got the show page working

--- a/views/users/index.hbs
+++ b/views/users/index.hbs
@@ -1,6 +1,6 @@
 <div class="usersIndex">
     <div>
-        <div class="usersPageNavigation">
+        <div>
             <h1>users</h1>
             <a href="/users/new">new user</a>
         </div>
