--- a/views/users/edit.hbs
+++ b/views/users/edit.hbs
@@ -8,7 +8,7 @@
             <div class="userInfo">
                 <h2> enter user info:</h2>
             </div>
-            <form action="/users" method="POST">
+                <form action="/users/{{user._id}}?_method=PUT" method="POST">
                 <div class="form-input">
                     <label for="name">name:</label>
                     <input type="text" name="name" value={{user.name}}>
