--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    {{{body}}}
-  </body>
+
+<head>
+  <title>{{title}}</title>
+  <link rel='stylesheet' href='/stylesheets/style.css' />
+</head>
+
+<body>
+  <header>
+    
+      <h1>fr!end</h1>
+    
+  </header>
+  {{{body}}}
+  <footer>
+  
+      <h5>trade your effects</h5>
+    
+  </footer>
+</body>
+
 </html>
