--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,12 @@
-
+* {
+  color: #010100;
+  border: 1px solid pink;
+}
 body {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   background-color: ghostwhite;
   margin: 0;
   width: 100vw;
@@ -10,6 +15,8 @@ body {
 .home {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   font-size: 2em;
   width: 100%;
 }
@@ -21,8 +28,6 @@ a {
 .newUserPage {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
 .defaultImg{
@@ -76,13 +81,6 @@ font-size: 1em;
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
-}
-header, footer {
-  height: 200px;
-  width: 100%;
-  display: flex;
-  justify-content: flex-start;
-  background-color: rgba(203, 203, 247, 0.1)
 }
 /* .personPage{
   width: 100vw;
