Refactored seeds.js database and successfully connected new effects route

--- a/views/users/index.hbs
+++ b/views/users/index.hbs
@@ -1,8 +1,10 @@
 <div class="usersIndex">
     <div>
-        <div>
+        <div class="usersNav">
             <h1>users</h1>
             <a href="/users/new">new user</a>
+            <a href="/users">other users</a>
+            {{!-- <a href="/">home</a> --}}
         </div>
         <div class="usersDisplay">
             {{#each users}}
