--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,6 @@
 <div class="home">
-    <h1>fr!end</h1>
-    <a class="homeUser" href="users/new">new user</a>
+    <div class="homeBody">
+        <h1>fr!end {{title}}</h1>
+        <a class="homeUser" href="users/new">new user</a>
+    </div>
 </div>
