--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,15 +8,19 @@
 
 <body>
   <header>
-    
-      <h1>fr!end</h1>
-    
+    <h1>fr!end {{title}}</h1>
+    <div class="navigation">
+      <a href="/users/new">new user</a>
+      <a href="/users">other users</a>
+      <a href="/">home</a>
+    </div>
+    </div>
   </header>
   {{{body}}}
   <footer>
-  
-      <h5>trade your effects</h5>
-    
+
+    <h5>trade your effects</h5>
+
   </footer>
 </body>
 
