Changed Schema to schema in models

--- a/views/effects/index.hbs
+++ b/views/effects/index.hbs
@@ -10,7 +10,7 @@
             {{#each effects}}
             <div>
                 <div class="effectImg">
-                    <img src="{{this.img}}" alt="Picture of Effect">
+                    <img src="{{../img}}" alt="Picture of Effect">
                 </div>
                 <div class="effectDescription">
                     <p>{{this.description}}</p>
