--- a/views/effects/index.hbs
+++ b/views/effects/index.hbs
@@ -19,6 +19,7 @@
                     <a href="/users/{{this._id}}">{{../username}}'s account</a>
                     <a href="/users/{{../userId}}/effects/{{this._id}}/connections">{{username}}'s account</a>
                     <a href="/users/{{../userId}}/effects/new">new effect</a>
+                    <a href="/users/{{../userId}}/effects/show">view effect</a>
                 </div>
             </div>
             {{/each}}
