Done with effects routes

--- a/views/effects/show.hbs
+++ b/views/effects/show.hbs
@@ -8,8 +8,8 @@
         </div>
     <div class="personBody">
         <div class="personInfo">
-            <img src="{{img}}" alt="Picture of {{username}}">
-            <p>{{description}}</p>
+            <img src="{{effect.img}}" alt="Picture of {{username}}">
+            <p>{{effect.description}}</p>
             <a href="/users/{{userId}}/effects">back to effects</a>
            <a href="/users/{{userId}}/effects/{{effect._id}}/delete">delete effect</a>
         </div>
