Completed second nested loop, connections, new route

--- a/views/effects/new.hbs
+++ b/views/effects/new.hbs
@@ -2,7 +2,7 @@
     <div class="newUserFormBody">
         <div class="newUser">
             <h2>create a new effect!</h2>
-            <img class="defaultImg" src="../images/default.gif" alt="Alternating colors">
+            <img class="defaultImg" src="../../../images/default.gif" alt="Alternating colors">
         </div>
         <div class="form">
             <div class="userInfo">
