--- a/views/effects/show.hbs
+++ b/views/effects/show.hbs
@@ -4,7 +4,8 @@
             <a href="/users">other users</a>
             <a class="stores" href="/users/{{userId}}/effects/new">new effect</a>
             <a href="/users/{{userId}}/effects">{{username}}'s effects</a>
-            <a class="connections" href="/users/{{userId}}/effects/{{effect_id}}/connections">{{username}}'s connections</a>
+            <a href="/users/{{userId}}/effects/{{effect._id}}/connections/new">new connection</a>
+            <a href="/users/{{userId}}/effects/{{effect._id}}/connections">view connections</a>
         </div>
     <div class="personBody">
         <div class="personInfo">
