--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,10 @@
 <div class="home">
     <div class="homeBody">
-        <h1>fr!end {{title}}</h1>
-        <a class="homeUser" href="users/new">new user</a>
+        <div>
+            <h1>{{title}}</h1>
+        </div>
+        <div>
+            <a class="homeUser" href="users/new">new user</a>
+        </div>
     </div>
 </div>
