--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,7 +8,7 @@
 
 <body>
   <header>
-    <h1>fr!end {{title}}</h1>
+    <h1>{{title}}</h1>
     <div class="navigation">
       <a href="/users/new">new user</a>
       <a href="/users">other users</a>
