--- a/views/users/show.hbs
+++ b/views/users/show.hbs
@@ -1,3 +1,7 @@
+<div class="stepper">
+  <a href="/users">Home</a> / Profile
+</div>
+
 <div class="personPage">
     <div class="personHeader">
             <h2>{{user.name}}'s page</h2>
