--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,25 +3,26 @@
 
 <head>
   <title>{{title}}</title>
-  <link rel='stylesheet' href='/stylesheets/style.css' />
+  <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
 <body>
-  <header>
+  <div class="fixed-header">
     <h1>{{title}}</h1>
-    <div class="navigation">
+    <nav>
       <a href="/users/new">new user</a>
       <a href="/users">other users</a>
       <a href="/">home</a>
-    </div>
-    </div>
-  </header>
+    </nav>
+
+  </div>
   {{{body}}}
-  <footer>
-
-    <h5>trade your effects</h5>
-
-  </footer>
+  <div class="fixed-footer">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/2/22/Home_font_awesome.svg" alt="">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/2/22/Home_font_awesome.svg" alt="">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/2/22/Home_font_awesome.svg" alt="">
+    <div class="container">Copyright &copy; 2016 Your Company</div>
+  </div>
 </body>
 
 </html>
