--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,9 +2,10 @@
     <div class="homeBody">
         <div>
             <h1>{{title}}</h1>
-        </div>
-        <div>
             <a class="homeUser" href="users/new">new user</a>
         </div>
+         <div class="first">1</div>
+        <div class="second">2</div>
+        <div class="third">3</div>
     </div>
 </div>
