--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -18,9 +18,9 @@
   </div>
   {{{body}}}
   <div class="fixed-footer">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/2/22/Home_font_awesome.svg" alt="">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/2/22/Home_font_awesome.svg" alt="">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/2/22/Home_font_awesome.svg" alt="">
+    <div class="image">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/2/22/Home_font_awesome.svg" alt=""> 
+    </div>
     <div class="container">Copyright &copy; 2016 Your Company</div>
   </div>
 </body>
