--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -19,9 +19,10 @@
   {{{body}}}
   <div class="fixed-footer">
     <div class="image">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/2/22/Home_font_awesome.svg" alt=""> 
+      <a href="/"><img src="https://i.imgur.com/GQA8yka.png" alt="Icon"></a> 
+      <a href="/users"><img src="https://i.imgur.com/2vZ6US1.png" alt="Icon"></a> 
+      <a href="/users/new"><img src="https://i.imgur.com/ezDgCJw.png" alt="Icon"></a> 
     </div>
-    <div class="container">Copyright &copy; 2016 Your Company</div>
   </div>
 </body>
 
